# buoy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  main.py  pyproject.toml
.cursor/rules/: ansible-conventions.mdc  branch-workflow.mdc  image-build.mdc  no-push.mdc  offline-first-docker.mdc  project-conventions.mdc  ros2-conventions.mdc
.cursor/skills/buoy-ansible/: SKILL.md
.cursor/skills/buoy-commits/: SKILL.md
.cursor/skills/buoy-image-build/: SKILL.md
.cursor/skills/maser-buoy-ansible/: SKILL.md
.cursor/skills/maser-buoy-commits/: SKILL.md
.cursor/skills/maser-buoy-image-build/: SKILL.md
.github/workflows/: build-image.yml
ansible/: playbook.yml
ansible/group_vars/: all.yml
ansible/roles/captive_portal/handlers/: main.yml
ansible/roles/captive_portal/tasks/: main.yml
ansible/roles/captive_portal/templates/: nodogsplash-service-override.conf.j2  nodogsplash.conf.j2
ansible/roles/command_center/tasks/: main.yml
ansible/roles/command_center/templates/: buoy-command-center.service.j2  maser-buoy-command-center.service.j2
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/first_boot/tasks/: main.yml
ansible/roles/frc/tasks/: main.yml
ansible/roles/frc/templates/: buoy-frc.service.j2  start-frc-bridge.sh.j2
ansible/roles/llm/tasks/: main.yml
ansible/roles/llm/templates/: buoy-llm.service.j2
ansible/roles/local_dns/tasks/: main.yml
command_center/: README.md  package.json  pnpm-lock.yaml  server.js  tailwind.config.js
command_center/public/: features.html  gamepad.html  index.html  networktables.html  ros-graph.html  ros-try.html
command_center/public/docs/: connect-your-device.md  install-linux.md  llm-buoy.md  networktables-frc.md  ros-hub.md
command_center/public/sandbox/: chat-ai.html  image-view-ai.html  index.html  live-coding.html  turtle-draw.html
command_center/scripts/: copy-vendor.js
command_center/src/: input.css
docker/: Dockerfile.llm_node  Dockerfile.nt_bridge  Dockerfile.rosbridge  Dockerfile.whisper  compose-raspap.yml  compose.yml  llm_node_launch.sh  rosbridge_launch.sh  whisper_entrypoint.sh  whisper_server.py
docker/llm_ws/src/llm_msgs/: CMakeLists.txt  package.xml
docker/llm_ws/src/llm_msgs/action/: Chat.action
docker/llm_ws/src/llm_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
docker/llm_ws/src/llm_node/llm_node/: __init__.py  llm_node.py
docker/nt_bridge/: bridge.py  entrypoint.sh  requirements.txt
docs/: connect-your-device.md  install-linux.md  llm-buoy.md  networktables-frc.md  ros-hub.md
docs/development/: networktables-bridge.md
docs/plans/: README.md  networktables-ros-bridge.md
image/: BUILD-QEMU.md  README.md  __init__.py  build-with-docker.sh  build.py  build_image.py  create-pi-imager-manifest.sh  create_manifest.py  docker-build-inner.sh  download_base.py  maser_buoy.rpi-imager-manifest
image/first_boot/: buoy-firstboot.service  maser-buoy-firstboot.service
scripts/: first_boot.sh  install.sh
(+14 files in other folders)
