[project]
name = "buoy"
version = "0.1.0"
description = "ROS 2 hub appliance – network infrastructure for robotics. Deploy as a Pi image or install on Linux."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.3.0",
]

[project.scripts]
download-base = "image.download_base:main"
build-image = "image.build_image:main"
create-manifest = "image.create_manifest:main"
build = "image.build:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["image"]
